corrections in formdata for post api

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -101,7 +101,7 @@
 							</div>
 						</div>
 						<div class="searching-input">
-							<input id="correct_placeholder0" class="input-panel" type="search"
+							<input id="correct_placeholder0" class="input-panel" type="search" name="input_word"
 								placeholder="Найти по словоформе" />
 
 							<div class="keyboard-container">
