--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
 	<title>main-frame</title>
 
 	<head>
-		<link rel="stylesheet" href="/static/styles.css" />
+		<link rel="stylesheet" href="static/styles.css" />
 	</head>
 
 	<body>
@@ -13,7 +13,7 @@
 
 			<ul class="middle-main">
 				<li class="middle-main_item">
-					<a href="" class="middle-main_link">
+					<a href="/" class="middle-main_link" id="new-search">
 
 						<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<mask id="mask0_637_112" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0"
