united system with output on page

--- a/frontend/search_output.html
+++ b/frontend/search_output.html
@@ -75,24 +75,17 @@
                 <a class="back_to_search" href="/">Вернуться к поиску</a>
                 <div class="statistics">
                     Найдено:
-                    <div class="statistics">
-                        <div class="word_stat">
-                            <div class="counter" id="instances">0</div>
-                            Вхождений
-                        </div>
-                        <div class="word_stat">
-                            <div class="counter" id="documents">0</div>
-                            Документов
-                        </div>
+                    <div class="word_stat">
+                        <div class="counter" id="documents">0</div>
+                        Документов
                     </div>
                 </div>
             </div>
 
-            <!-- <div class="text-output">
-                    <div class="example-output">
-                        По заданному поиску не найдено результатов. <br> Попробуйте поменять запрос.
-                    </div>
-                    <div class="real-output">
+            <div class="example-output" id="no-found-data">
+                По заданному поиску не найдено результатов. <br> Попробуйте поменять запрос.
+            </div>
+            <!-- <div class="real-output">
                         <div class="text-item">
                             <div class="top-base-container">
                                 <div class="bold-name">
@@ -115,8 +108,8 @@
                             </div>
                         </div>
                     </div>
-                </div> -->
-        </div>
+                </div>  -->
+            <!-- </div> -->
         </div>
         <footer></footer>
         <script src="static/search_output.js"></script>
